force-app/main/default/objects/InvestigationDemoData__c/InvestigationDemoData__c.object-meta.xml
<CustomObject>
    <label>InvestigationDemoData</label>
    <nameField>
        <label>InvestigationDemoData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InvestigationDemoData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>