force-app/main/default/objects/InvestigationDemoData__c/fields/Accused_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Accused_First_Name__c</fullName>
    <label>Accused First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>