force-app/main/default/objects/InvestigationDemoData__c/fields/Accused_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Accused_Last_Name__c</fullName>
    <label>Accused Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>