force-app/main/default/objects/InvestigationDemoData__c/fields/Victim_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Victim_Last_Name__c</fullName>
    <label>Victim Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>